<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_size_twenty" />

        <TextView
            android:id="@+id/txt_address_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/address_line"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_size_sixteen" />

        <TextView
            android:id="@+id/txt_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/city"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_size_sixteen" />

        <TextView
            android:id="@+id/txt_address_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/address_state"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_size_sixteen" />

        <TextView
            android:id="@+id/txt_pin_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/pin_code"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_size_sixteen" />

        <TextView
            android:id="@+id/txt_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/mobile"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_size_sixteen" />

        <TextView
            android:id="@+id/txt_choose_another"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:gravity="right"
            android:text="@string/choose_another_address"
            android:textColor="@color/Login"
            android:textSize="@dimen/sp_size_sixteen" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_size_twenty" />

        <TextView
            android:id="@+id/txt_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_5dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_size_twenty" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="190dp"
        android:layout_height="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/promo_border">

        <TextView
            android:id="@+id/applypromo"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/promo_applyborder"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="Apply"
            android:textColor="@color/grey"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/applypromo"
            android:layout_toStartOf="@+id/applypromo"
            android:background="@null"
            android:singleLine="true"
            android:textSize="14dp">

        </EditText>
    </RelativeLayout>

    <Button
        android:id="@+id/proceedtopay"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/buttonorange"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="Proceed to Pay"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="18dp"
        android:textStyle="bold" />
</LinearLayout>