<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_size_twenty_five" />

    <TextView
        android:id="@+id/txt_email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="15dp"
        android:text="@string/email_id"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_size_eighteen" />

    <RelativeLayout
        android:id="@+id/mailbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/adresbg" >

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:background="@null"
        android:textCursorDrawable="@null"
        android:textColor="@color/black"
        android:inputType="textEmailAddress" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginStart="@dimen/_10dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_size_eighteen" />

    <RelativeLayout
        android:id="@+id/psd"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/pwd"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/adresbg"
        android:inputType="textWebPassword" >

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:background="@null"
        android:textCursorDrawable="@null"
        android:textColor="@color/black"
        android:inputType="textWebPassword" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginStart="@dimen/_10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/Login"
        android:textSize="@dimen/sp_size_eighteen" />

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up_with_3pmstore"
        android:textColor="@color/Login"
        android:textSize="@dimen/sp_size_eighteen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/logbtn"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_size_twenty" />

        <View
            android:layout_width="@dimen/_5dp"
            android:layout_height="match_parent" />


        <RelativeLayout
            android:id="@+id/facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:visibility="gone"
            android:layout_marginTop="-0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fbbtn"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/f" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
